added build variables to env

--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
+GOLANG_VERSION=1.25
+
+ALPINE_VERSION=3.21.4
+ALPINE_IMAGE_SUFFIX=alpine
+
 GOTENBERG_VERSION=snapshot
+GOTENBERG_USER_GID=1001
+GOTENBERG_USER_UID=1001
+
+NOTO_COLOR_EMOJI_VERSION=v2.047 # See https://github.com/googlefonts/noto-emoji/releases.
+PDFTK_VERSION=v3.3.3            # See https://gitlab.com/pdftk-java/pdftk/-/releases - Binary package.
+PDFCPU_VERSION=v0.11.0          # See https://github.com/pdfcpu/pdfcpu/releases.
+
 DOCKER_REGISTRY=gotenberg
 DOCKER_REPOSITORY=gotenberg
 DOCKERFILE=build/Dockerfile
@@ -6,3 +18,4 @@ DOCKERFILE_ALPINE=build/Dockerfile.alpine
 DOCKERFILE_CLOUDRUN=build/Dockerfile.cloudrun
 DOCKERFILE_AWS_LAMBDA=build/Dockerfile.aws-lambda
 DOCKER_BUILD_CONTEXT='.'
+
